--- a/Asteroids/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids/Asteroids.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Credits.cpp" />
     <ClCompile Include="..\src\Game.cpp" />
     <ClCompile Include="..\src\Main.cpp" />
     <ClCompile Include="..\src\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\Credits.h" />
     <ClInclude Include="..\src\Game.h" />
     <ClInclude Include="..\src\Menu.h" />
   </ItemGroup>
