--- a/Asteroids/Asteroids/Asteroids.vcxproj.filters
+++ b/Asteroids/Asteroids/Asteroids.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="..\src\Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Credits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Credits.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
