V 0.15: cosas que no se guardaron el el ultimo commit

--- a/Asteroids/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids/Asteroids.vcxproj
@@ -91,6 +91,10 @@
     <OutDir>$(SolutionDir)\bin\$(Plataform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)\obj\$(Plataform)\$(Configuration)\</IntDir>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <OutDir>$(SolutionDir)\bin\$(Plataform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)\obj\$(Plataform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
