--- a/Asteroids/Asteroids/Asteroids.vcxproj.filters
+++ b/Asteroids/Asteroids/Asteroids.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\src\menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\controls.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\credits.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\controls.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
